FFmpegThumbnailer

version 1.4.0
- Filter support added that allows library users to implement filters that will be applied to the frame data
- Fixed compilation error with gcc 4.4

version 1.3.0
- Option added to ignore aspect ratio and generate square thumbnails
- Quality option added for jpeg thumbnails
- Man page added (thanks to Lionel Le Folgoc)
- Added option to seek to absolute time in stead of percentage

version 1.2.6
- Fixed seeking in large files due to integer overflow (Thanks to AWaters1)
- Fixed possible linker error (Thanks to pressh)

version 1.2.5
- Fixed crash when thumbnailing raw avi files

version 1.2.4
- Fixed missing includes when compiling with gcc 4.3 (thanks to Samuli Suominen)

version 1.2.3
- ffmegthumbnailer now compiles against latest ffmpeg revisions (thanks to Alexis Ballier)

version 1.2.2
- Fixed linker errors when using certain ldflags

version 1.2.1
- Fixed compilation error in c interface when compiled with c compiler
- Error handling added to c interface

version 1.2.0
- Option to output files in jpeg
- ffmpegthumbnailer can now be accessed as a library (libffmpegthumbnailer) by other applications

version 1.1.5
- Support for large files (files larger than 2Gb)
- Seeking in h264 files is enabled again, use -w option from commandline to disable this if you have 100% cpu usage (using older versions of ffmpeg)
- Give up reading packets from a file after a number of attempts to avoid a hanging ffmpegthumbnailer for certain file types (noticed on h264 and ac3 in vob container)

version 1.1.4
- License information added to source files

version 1.1.3
- Use PkgConfig for ffmpeg to avoid build problems

version 1.1.2
- Fixed compilation error when using latest ffmpeg (thanks to Samuli Suominen)

version 1.1.1
- Fixed compilation error when using latest ffmpeg
- Disabled seeking in h264 files, because this causes 100% CPU usage in ffmpeglib (workaround)

version 1.1
- Updated command line argument parser